# unfolder

./: .gitignore  .gitmodules  README.md
episode001-unfoldr/: LICENSE  Unfoldr.hs  episode001-unfoldr.cabal
episode002-quantified-constraints/: episode002-quantified-constraints.cabal
episode002-quantified-constraints/src/: QuantifiedConstraints.hs  SummaryOf14860.hs
episode003-injectivity/: Injectivity.hs  episode003-injectivity.cabal
episode004-falsify/: episode004-falsify.cabal
episode004-falsify/app/: Main.hs
episode005-composing-left-folds/: README.md  episode005-composing-left-folds.cabal  hie.yaml  textStats.hs  textStatsCompositionalFold.hs  textStatsMultipleReads.hs  textStatsSingleFold.hs
episode006-computing-type-class-dicts/: dicts.cabal
episode006-computing-type-class-dicts/app/: Main.hs
episode007-laws/: LICENSE  laws.cabal
episode007-learning-by-testing/: LearningByTesting.hs  episode007-learning-by-testing.cabal
episode008-laws/: LICENSE
episode008-laws/src/: Laws.hs
episode010-generalBracket/: bracket.cabal
episode010-generalBracket/app/: Bracket.hs  Main.hs  MonadBracket1.hs  MonadBracket2.hs  MonadBracket3.hs
episode011-icfp-2023/: cabal.project  icfp2023.cabal
episode011-icfp-2023/demo1/: Main.hs
episode011-icfp-2023/demo2/: Main.hs
episode013-open-recursion/: openrec.cabal
episode013-open-recursion/app/: Main.hs  Version0.hs  Version1.hs  Version2.hs
episode015-interruptible-operations/: ep15.cabal
episode015-interruptible-operations/app/: Debug.hs  Main.hs
episode016-monads-and-deriving-via/: ErrorDerivingVia.hs  ErrorNew.hs  ErrorOld.hs  ErrorUniversalInstances.hs  episode016-monads-and-deriving-via.cabal
episode017-circular-programs/: ep17.cabal
episode017-circular-programs/bench/: Main.hs
episode017-circular-programs/src/: BFL.hs  RepMin.hs
episode017-circular-programs/src/HOS/: Circular.hs  Exp.hs  Speculative.hs
episode018-selector-optimization/: episode018-selector-optimization.cabal
episode018-selector-optimization/app/: DoInline.hs  DontInline.hs  Main.hs
episode018-selector-optimization/systematic/: .gitignore  README.md  cabal.project  clean.sh  debuggee.cabal  go.sh
episode018-selector-optimization/systematic/debuggee/: Main.hs
episode018-selector-optimization/systematic/dump/: README.md
episode018-selector-optimization/systematic/exe/: README.md
episode018-selector-optimization/systematic/src/: LastBeforeBreak.hs  Swap.hs
episode019-repeatedly/: LICENSE  ep19.cabal
episode019-repeatedly/app/: Aux.hs  Main.hs
episode020-dijkstras-shortest-paths/: Dijkstra.hs  episode020-dijkstras-shortest-paths.cabal
episode021-testing-without-reference/: LICENSE  cabal.project  ep21.cabal
episode021-testing-without-reference/src/: Dijkstra.hs  Graph.hs
episode021-testing-without-reference/test/: Main.hs
episode021-testing-without-reference/test/Util/: QuickCheck.hs
episode022-foldr-build-fusion/: List.hs  ListFusion.hs  Main.hs  Monolithic.hs  episode022-foldr-build-fusion.cabal
episode023-specialization/: .gitignore  cabal.project  specialization.cabal
episode023-specialization/src/: Add.hs  Main.hs  Multiply.hs
episode025-java-to-haskell/: cabal.project  ep25.cabal
episode025-java-to-haskell/app/: RecordDot.hs  Runner.hs  Service.hs  VarArgs.hs
episode025-java-to-haskell/proto/: README.md  kvstore.proto
episode025-java-to-haskell/proto/Proto/: Kvstore.hs  Kvstore_Fields.hs
episode026-variable-arity-functions/: VarArgs.hs  episode026-variable-arity-functions.cabal
episode027-duality/: episode027-duality.cabal
episode027-duality/src/: Compression.hs
episode027-duality/src/ClientServer/: FirstAttempt.hs  PosNeg.hs  SendRecv.hs
episode028-type-families-overlapping/: Flatten'.hs  Flatten.hs  Show'.hs  Show.hs  episode028-type-families-overlapping.cabal
episode029-exception-backtraces/: ep29.cabal
episode029-exception-backtraces/src/: Main.hs
episode030-runst/: ST.hs  STOwn.hs  episode030-runst.cabal
episode031-nothunks/: .gitignore  ep31.cabal  gen-profile.sh
episode031-nothunks/app/: Main.hs  Remarks.hs  StrictMVar.hs  Version1.hs  Version2.hs
episode032-tictactoe/: Rendering.hs  TicTacToe.hs  episode032-tictactoe.cabal
episode034-monads/c/: Makefile  example.c
episode034-monads/hs/: LICENSE  ep34.cabal
episode034-monads/slides/: .gitignore  monads.tex
episode035-distributive-representable/: DistributiveRepresentable.hs  LICENSE  Rendering.hs  episode035-distributive-representable.cabal
episode036-safe-vs-unsafe-ffi/: README.md  ep36.cabal
episode036-safe-vs-unsafe-ffi/app/: Test1_CPU.hs  Test2_Timeout.hs  Test3_Concurrent.hs  Test4_StopTheWorld.hs  Test5_Pinning.hs
episode036-safe-vs-unsafe-ffi/cbits/: ep36.c  ep36.h
episode036-safe-vs-unsafe-ffi/src/: Native.hs  Tests.hs
episode036-safe-vs-unsafe-ffi/src/CBits/: Interruptible.hs  Safe.hs  Unsafe.hs
episode037-advent-of-code-andres/: D04.hs  episode037-advent-of-code.cabal
episode037-advent-of-code-edsko/: LICENSE  ep37.cabal  small.txt
episode037-advent-of-code-edsko/app/: Main.hs
episode038-taste-of-cuda/: README.md
episode040-convolutions/: .gitignore  cabal.project  ep40.cabal
episode040-convolutions/src/Ep40/: Tensor.hs
episode040-convolutions/test/: CUDNN.hs  Main.hs
episode040-convolutions/test-cbits/: test-cudnn.c  test-cudnn.h
episode042-typedKanren/: cabal.project  ep42.cabal
episode042-typedKanren/src/: Basics.hs
episode042-typedKanren/src/Kanren/: Instances.hs
episode042-typedKanren/src/Typechecker/: Hybrid.hs  Language.hs  Relational.hs
episode044-lockstep-testing/: LICENSE  cabal.project  ep44.cabal
episode046-end-to-end-app/: CHANGELOG.md  episode046-end-to-end-app.cabal
episode047-pure-parallelism/: .gitignore  Makefile  ep47.cabal
episode049-shrinking/: ep49.cabal
episode051-sop-core/: ep51.cabal
episode052-bidirectional/: LICENSE  episode052-bidirectional.cabal
episode053-static-pointers/: README.md  ep53.cabal  testinput.txt
episode054-not-quite-monads/: LICENSE  README.md  ep54.cabal
episodeXXX-template-core/: ep38.cabal
(+56 files in other folders)
