cabal-version: 3.0
name:          episode002-quantified-constraints
version:       0.1.0
homepage:      https://github.com/well-typed/unfolder
license:       BSD-3-Clause
license-file:  LICENSE
author:        Edsko de Vries
maintainer:    edsko@well-typed.com
build-type:    Simple

common lang
  ghc-options:
      -Wall
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
  build-depends:
      base >= 4.16
  default-language:
      GHC2021

library
  import:
      lang
  exposed-modules:
      QuantifiedConstraints
  hs-source-dirs:
      src
  build-depends:
    , borsh
    , bytestring
    , cryptonite
    , megaparsec
    , parser-combinators
