cabal-version:      3.0
name:               openrec
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Simple

common lang
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16
  default-language:
      GHC2021

executable openrec
  import:
      lang
  main-is:
      Main.hs
  other-modules:
      Version0
      Version1
      Version2
  hs-source-dirs:
      app
