cabal-version:      3.0
name:               ep15
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Simple

common lang
  ghc-options:
      -Wall
  build-depends:
      base ^>=4.16.4.0
  default-language:
      GHC2021

executable ep15
  import:
      lang
  hs-source-dirs:
      app
  main-is:
      Main.hs
  other-modules:
      Debug
  ghc-options:
      -threaded
