cabal-version: 3.0
name: episode020-monads-and-deriving-via
author: Andres Löh <andres@well-typed.com>
maintainer: unfolder@well-typed.com
version: 1
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE

library
  default-language: GHC2021
  build-depends:
    base,
    containers
  exposed-modules:
    Dijkstra
