cabal-version: 3.0
name: episode022-foldr-build-fusion
author: Andres Löh <andres@well-typed.com>
maintainer: unfolder@well-typed.com
version: 1
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE

executable fusion
  default-language: GHC2021
  ghc-options: -Wall
  build-depends:
    base,
    criterion
  main-is:
    Main.hs
  other-modules:
    Monolithic
    List
    ListFusion
