cabal-version: 3.8
name: specialization
author: Finley McIlwaine <finley@well-typed.com>
maintainer: unfolder@well-typed.com
version: 1
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE

executable specialization
    default-language:
        GHC2021
    hs-source-dirs:
        src
    main-is:
        Main.hs
    other-modules:
        Add
        Multiply
    build-depends:
        base
      , random
