cabal-version: 3.0
name: episode030-runst
author: Andres Löh <andres@well-typed.com>
maintainer: unfolder@well-typed.com
version: 1
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE

library
  default-language: GHC2021
  ghc-options: -Wall -fprint-explicit-foralls
  build-depends:
    base,
    mtl,
    vector
  exposed-modules:
    ST
    STOwn
