cabal-version: 3.0
name: episode037-advent-of-code
author: Andres Löh <andres@well-typed.com>
maintainer: unfolder@well-typed.com
version: 1
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE

executable d04
  main-is: D04.hs
  default-language: GHC2021
  build-depends:
    base,
    bifunctors,
    containers,
    megaparsec,
    mtl,
    text,
    transformers,
